Started fixing test. Not finished yet